[v5.24.0] feat(reminder): add customer import template
